remove stores use indexed db

--- a/src/assets/button.css
+++ b/src/assets/button.css
@@ -45,6 +45,10 @@ button, .clickable {
     background-color: var(--color-highlight-primary);
 }
 
+.btn-circle.btn-circle--no-border {
+    border: none;
+}
+
 .btn-icon {
     box-sizing: border-box;
     display: flex;
