--- a/src/assets/position.css
+++ b/src/assets/position.css
@@ -6,3 +6,14 @@
     top: 0px;
     right: 0px;
 }
+
+.scroll { overflow: auto; }
+.scroll-x { overflow-x: auto; }
+
+.scroll--hidden {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+.scroll--hidden::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
