--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -33,6 +33,7 @@ body {
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   margin: 0px;
+  overscroll-behavior-y: contain;
 }
 
 .color--red { --color-value: #AC2525; }
