--- a/src/assets/icons.css
+++ b/src/assets/icons.css
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-right:before {
+  content: "\e90e";
+}
 .icon-skull:before {
   content: "\e90d";
 }
