--- a/src/assets/text.css
+++ b/src/assets/text.css
@@ -3,6 +3,7 @@
 .text-primary { color: var(--color-primary); }
 .text-secondary { color: var(--color-fg-secondary); }
 .text-idle { color: var(--color-border); }
+.text-warn { color: #AC2525; }
 
 .text-s { font-size: 12px; }
 .text-pre { white-space: pre; }
