--- a/src/assets/text.css
+++ b/src/assets/text.css
@@ -7,3 +7,9 @@
 
 .text-s { font-size: 12px; }
 .text-pre { white-space: pre; }
+
+.ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
