--- a/src/assets/position.css
+++ b/src/assets/position.css
@@ -2,6 +2,7 @@
 .pos-a { position: absolute; }
 
 .pos-right { right: 0px; }
+.pos-left { left: 0px; }
 .pos-top-right {
     top: 0px;
     right: 0px;
