increase hint visibility

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -53,7 +53,7 @@ select {
 .color--orange { --color-value: #AC6625; }
 .color--blue { --color-value: #258CAC; }
 .color--purple { --color-value: #9125AC; }
-.color-fertilize { --color-value: #7d2a78 }
+.color-fertilize, .color-fertilizer { --color-value: #7d2a78 }
 .color-water { --color-value: #2d5884 }
 .color-trowel, .color-plant, .color-plantIn, .color-plantOut { --color-value: #377322 }
 .color-shears, .color-cut { --color-value: #5b3d1f }
